--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 Bin/
 Bin_Int/
 
-# Files
-
-*.user
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
+**.csproj
