Add ImGui layer events; Add group to premake5.lua;

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -6,3 +6,11 @@ Size=400,400
 Pos=650,20
 Size=550,680
 
+[Window][Example: Log]
+Pos=95,114
+Size=500,400
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=83,75
+Size=339,341
+
