--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=971,19
-Size=309,701
+Pos=634,27
+Size=638,685
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Example: Log]
 Pos=0,455
@@ -27,11 +26,9 @@ Size=1280,720
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1280,701 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=969,701 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=368,680 Selected=0x20E3C5EA
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=366,680 Split=Y Selected=0xE87781F4
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=969,434 CentralNode=1
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=969,265 Selected=0xDBFE1153
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=309,701 Selected=0xE87781F4
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=242,284 Size=1280,701 Split=X
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=368,680 Selected=0x20E3C5EA
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=366,680 Split=Y Selected=0xE87781F4
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=969,434 CentralNode=1
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=969,265 Selected=0xDBFE1153
 
